tests/snapshots/test_diff_feature__constraint-2.snap
---
source: tests/test_diff_feature.rs
expression: a.diff(&b)
---
Standard:
  name: b
  coefficients: []
  sense: NoChange
  rhs: 0
